--- a/.github/workflows/cla.yaml
+++ b/.github/workflows/cla.yaml
@@ -9,6 +9,11 @@ jobs:
   CLAssistant:
     runs-on: ubuntu-latest
     steps:
+      - name: "System Information"
+        run: |
+          uname -a
+          id
+          ls
       - name: "CLA Assistant"
         if: (github.event.comment.body == 'recheck' || github.event.comment.body == 'I have read the Mondoo CLA Document and I hereby sign the CLA') || github.event_name == 'pull_request_target'
         uses: contributor-assistant/github-action@v2.3.2
